# ai-cyberattack-defense

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CITATIONS.md  CLI_TEST_README.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Case_Study_AI_Cyberattack_Response.md  DEMO_GUIDE.md  KEY_TAKEAWAYS_AND_FUTURE_WORK.md  LICENSE  Makefile  QUICKSTART.md  README.md  SECURITY.md  SECURITY_AUDIT.md  SETUP_GUIDE.md  Threat_Analysis_GTG-1002.md  capture_screenshots.py  check_environment.py  cli_test.py  demo_dashboard.py  install_vector_db.py  pyproject.toml  pytest.ini  setup.bat  setup.py  setup.sh  test_dashboard_e2e.py  verify_setup.py  verify_startup.py
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
ai_tools/: __init__.py  config.py  requirements.txt
ai_tools/ai_analysis/: __init__.py  ollama_client.py  security_assistant.py  threat_analyzer.py
ai_tools/detection/: __init__.py  ai_pattern_detector.py  enhanced_detector.py
ai_tools/simulation/: __init__.py  attack_simulator.py
ai_tools/utils/: __init__.py  database.py  helpers.py  logger.py  models.py  startup.py  vector_db.py
app/(auth)/: auth.ts
components/: chat-header.tsx
dashboard/: README.md  app.py
dashboard/components/: ai_insights.py  alert_feed.py  metrics_panel.py  threat_chart.py  threat_correlation.py
docs/: AI_WORKFLOW.md  ARCHITECTURE.md  CONFIGURATION.md  DEMO_OUTPUT.md  DEMO_VERIFICATION.md  DETECTION_FLOW.md  GLOSSARY.md  IMPLEMENTATION_ROADMAP.md  README.md  REPOSITORY_STRUCTURE.md  RESEARCH_FOUNDATION.md  TESTING_ROADMAP.md  TEST_PLAN.md  ai_integration_guide.md  ai_pattern_detector_guide.md
docs/screenshots/: MANUAL_INSTRUCTIONS.md  README.md
docs/screenshots/dashboard/: CAPTURE_INSTRUCTIONS.md  IMAGE_SOURCES.md  README.md
scripts/: __init__.py  capture_screenshots.py  verify_setup.py  verify_startup.py
tests/: __init__.py  conftest.py  requirements.txt
tests/e2e/: __init__.py  test_dashboard_e2e.py
tests/integration/: test_ai_workflow.py  test_dashboard_components.py  test_detector_simulator.py
tests/pages/: chat.ts
tests/unit/: test_ai_pattern_detector.py  test_attack_simulator.py  test_enhanced_detector.py  test_models.py  test_ollama_client.py
tools/: __init__.py  cli_test.py  demo_dashboard.py
(+1 files in other folders)
